# life-chart-api

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt
docs/: convergent_profile.schema.json  frontend_contract_v1.md  numerology_engine_spec.md  release_core_v1.md
scripts/: build_profile_response_example.py  smoke_intersection_v1.py  smoke_narrative_get_compat.py
tests/: asgi_client.py  test_all_examples_validate_against_schemas.py  test_chinese_luck_pillar_builder_unit.py  test_chinese_schema_example_valid.py  test_chinese_tier1_overlay_changes_with_input.py  test_chinese_tier2_changes_with_input.py  test_chinese_tier2_deterministic.py  test_convergent_profile_compute.py  test_convergent_profile_schema.py  test_deep_reading.py  test_error_envelope_internal_error.py  test_error_envelope_invalid_query_params.py  test_error_envelope_rate_limited.py  test_error_schema_example_valid.py  test_forecast_range_too_large.py  test_forecast_schema_example_valid.py  test_forecast_view_unit.py  test_health_endpoint.py  test_intersection_engine_deterministic.py  test_intersection_engine_schema_valid.py  test_intersection_engine_v1.py  test_intersection_v2_changes_with_input.py  test_intersection_v2_convergence.py  test_intersection_v2_deterministic.py  test_metrics_endpoint.py  test_metrics_increment_on_error.py  test_metrics_increment_on_request.py  test_narrative_golden_snapshot_v1.py  test_narrative_schema_example_valid.py  test_narrative_view_unit.py  test_numerology_changes_with_input.py  test_numerology_deterministic.py  (+64 more)
(+87 files in other folders)
