[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-chart-api"
version = "0.1.0"
description = "Numerology and astrology engine API"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic>=2",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
