[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "life-chart-api"
version = "0.1.0"
description = "Numerology and astrology engine API"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic>=2",
  "pyswisseph",
  "requests",
  "tzdata",
  "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["E501"]
